corrections to notebook file

--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -829,7 +829,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** Precision and recall values would be more relevant because the cost of misclassification can be high. A high precision score is important to minimize false positives, which can lead to a loss of potential customers.\n",
+    "**Answer:** Precision and recall values are relevant because the cost of misclassification can be high. A high precision score is important to minimize false positives, which can lead to a loss of potential customers.\n",
     "\n",
     "On the other hand, a high recall score is important to minimize false negatives, which can lead to significant financial losses.\n",
     "\n",
@@ -1186,11 +1186,11 @@
     "\n",
     "**Answer:** Looking at the two classification reports for the original dataset and resampled dataset, it looks as if model performance increased on the test data as a result of resampling the data. We get strong precision and perfect recall on the test dataset, which is a good indication about how well the model is likely to perform in real life.\n",
     "\n",
-    "The Oversampled data improves on the initial Logical Regression model. The balanced accuracy score increased from 0.942 to 0.995. It improves the predictability of true positives meaning that it is more effective at distinguishing high-risk loans with high recall accuraccy.\n",
+    "The resampled data improves on the initial Logical Regression model. The balanced accuracy score increased from 0.942 to 0.995. It improves the predictability of true negatives meaning that it is more effective at distinguishing high-risk loans with high recall and accuracy.\n",
     "\n",
-    "The oversampled model generated an accuracy score of 100% which turned out to be higher than the model fitted with imbalanced data. The oversampled model performs better because it catches mistakes such as labeling high-risk loans as healthy loans. \n",
+    "The resampled model generated an accuracy score of 100% which turned out to be higher than the model fitted with imbalanced data. The oversampled model performs better because it catches mistakes such as labeling high-risk loans as healthy loans. \n",
     "\n",
-    "A lending company might favour a model that requires a higher recall as healthy loans being identified as high-risk will turn away valuable customers and investments.  Conversely, high-risk loans identified as healthy loans might be costly for a lending companywhen the customer defaults on their loans.  Ultimately, increases our precision for high-risk loans is the favourable choice."
+    "A lending company might favour a model that favours the ability to predict high-risk loans, thus minimizing potential financial losses for the company. The trade-off might be a higher number of healthy loans being tossed out as false negatives (predicted as risky, when they are healthy), but that would be an acceptable loss over predicting a high number of false positives (high-risk loans identified as healthy loans), which might be costly for a lending company when the customer defaults on their loans.  Ultimately, increasing our precision for high-risk loans is the favourable choice."
    ]
   },
   {
